--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -32,7 +32,8 @@
                             <path d="M21 21l-5.2-5.2"></path>
                         </svg>
                     </a>
-                    <a class="btn btn-sm btn-outline-secondary" href="#">Sign up</a>
+                    <a class="btn btn-md btn-secondary mx-3" href="/login">Log In</a>
+                    <a class="btn btn-md btn-outline-secondary" href="/signup">Sign Up</a>
                 </div>
             </div>
         </header>
