--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,4 +1,8 @@
-<%- include("partials/header.ejs")%>
+<% if (user) { %>
+    <%- include("partials/header.ejs", {user: user})%>
+<% } else { %>
+    <%- include("partials/header.ejs")%>
+<% } %>
         <div class="p-4 p-md-5 mb-4 rounded text-body-emphasis bg-body-secondary">
             <div class="col-lg-6 px-0">
                 <h1 class="display-4 fst-italic">Title of a longer featured blog post</h1>
