--- a/views/login.ejs
+++ b/views/login.ejs
@@ -120,7 +120,7 @@
 
           axios
             .post("/login", jsonData)
-            .then((response) => console.log(response.data))
+            .then((response) => window.location.href = response.data.redirect)
             .catch((error) => console.log(error.response.data));
         });
     </script>
