--- a/views/modify.ejs
+++ b/views/modify.ejs
@@ -1,33 +1,58 @@
-<%- include("partials/header.ejs")%>
+<!DOCTYPE html>
+<html lang="en">
 
-    <div class="postq">
-        <form id="add-post">
-            <div class="input-group mb-3">
-                <input type="text" class="form-control" placeholder="Enter post title here" aria-label="Username"
-                    aria-describedby="basic-addon1" name="title" required/>
-            </div>
-            <div class="input-group">
-                <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04"
-                    aria-label="Upload" name="thumbnail" accept="image/*" required/>
-                <!-- <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">
+<head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://uicdn.toast.com/editor/latest/toastui-editor.min.css" />
+    <link rel="stylesheet" href="/styles/home.css" />
+</head>
+
+<body>
+    <div class="container">
+        <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom">
+          <a href="javascript:window.history.back()" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto link-body-emphasis text-decoration-none">
+            <svg xmlns="http://www.w3.org/2000/svg" height="40" fill="currentColor" class="bi bi-arrow-left-short" viewBox="0 0 16 16">
+                <path fill-rule="evenodd" d="M12 8a.5.5 0 0 1-.5.5H5.707l2.147 2.146a.5.5 0 0 1-.708.708l-3-3a.5.5 0 0 1 0-.708l3-3a.5.5 0 1 1 .708.708L5.707 7.5H11.5a.5.5 0 0 1 .5.5"/>
+            </svg>
+            <span class="fs-4">Add Post</span>
+          </a>
+        </header>
+      </div>
+    <main class="container"></main>
+</body>
+
+<div class="postq">
+    <form id="add-post">
+        <div class="input-group mb-3">
+            <input type="text" class="form-control" placeholder="Enter post title here" aria-label="Username"
+                aria-describedby="basic-addon1" name="title" required />
+        </div>
+        <div class="input-group">
+            <input type="file" class="form-control" id="inputGroupFile04" aria-describedby="inputGroupFileAddon04"
+                aria-label="Upload" name="thumbnail" accept="image/*" required />
+            <!-- <button class="btn btn-outline-secondary" type="button" id="inputGroupFileAddon04">
                     Button
                 </button> -->
-            </div>
-            <div class="input-group my-3">
-                <label class="input-group-text" for="inputGroupSelect01">Category</label>
-                <select class="form-select" id="inputGroupSelect01" name="category" required>
-                  <option selected>Choose...</option>
-                  <option value="world">World</option>
-                  <option value="technologyo">Technology</option>
-                  <option value="design">Design</option>
-                  <option value="culture">Culture</option>
-                  <option value="style">Style</option>
-                </select>
-              </div>
-              
-            <div id="body" class="mb-3"></div>
-            <input type="hidden" name="content" id="content" required/>
-            <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
-    </div>
-    <%- include("partials/footer.ejs")%>
+        </div>
+        <div class="input-group my-3">
+            <label class="input-group-text" for="inputGroupSelect01">Category</label>
+            <select class="form-select" id="inputGroupSelect01" name="category" required>
+                <option selected>Choose...</option>
+                <option value="world">World</option>
+                <option value="technology">Technology</option>
+                <option value="design">Design</option>
+                <option value="culture">Culture</option>
+                <option value="style">Style</option>
+            </select>
+        </div>
+
+        <div id="body" class="mb-3"></div>
+        <input type="hidden" name="content" id="content" required />
+        <button type="submit" class="btn btn-primary">Submit</button>
+    </form>
+</div>
+<%- include("partials/footer.ejs")%>
