--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -37,11 +37,11 @@
             <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item">
                 <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
-                  aria-selected="true">About</a>
+                  aria-selected="true">Timeline</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
-                  aria-controls="profile" aria-selected="false">Timeline</a>
+                  aria-controls="profile" aria-selected="false">Settings</a>
               </li>
             </ul>
           </div>
@@ -147,7 +147,7 @@
                   <label>Availability</label>
                 </div>
                 <div class="col-md-6">
-                  <p>6 months</p>
+                  <p><a href="/logout">6 months</a></p>
                 </div>
               </div>
               <div class="row">
