Configured signup route
finished up the signup route and configured email confirmation, integrating "resend" for SMTP. finally got the users table to work too...

--- a/views/login.ejs
+++ b/views/login.ejs
@@ -80,7 +80,7 @@
               <div class="text-center">
                 <p>
                   Not a member?
-                  <a href="#!" class="text-decoration-none">Register</a>
+                  <a href="/signup" class="text-decoration-none">Register</a>
                 </p>
                 <p>or sign up with:</p>
                 <button type="button" class="btn btn-link btn-floating mx-1">
