--- a/public/styles/login.css
+++ b/public/styles/login.css
@@ -2,9 +2,30 @@ body {
   height: 100vh;
   display: flex;
   align-items: center;
+  position: relative;
 }
 
 .col-md-6 {
   width: 400px;
 }
 
+#modalSheet {
+  background-color: rgba(128, 128, 128, 0.342);
+  backdrop-filter: blur(8px);
+}
+
+.modal-fullscreen {
+  display: block;
+}
+
+.modal-dialog {
+  width: 400px;
+}
+
+.modal-body {
+  padding: 0 30px
+}
+
+.hidden {
+  display: none;
+}
