--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -12,26 +12,40 @@
 
 <body>
   <div class="container emp-profile">
-    <form method="post">
+    <form id="profile-form">
       <div class="row">
         <div class="col-md-4">
           <div class="profile-img">
-            <img
-              src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcS52y5aInsxSm31CvHOFHWujqUx_wWTS9iM6s7BAm21oEN_RiGoog"
-              alt="" />
-            <div class="file btn btn-lg btn-primary">
-              Change Photo
-              <input type="file" name="file" />
-            </div>
+            <% if (user.pfp) { %>
+              <img src="<%= user.pfp %>" alt=""/>
+            <% } else { %>
+              <svg xmlns="http://www.w3.org/2000/svg" height="125" fill="#888" class="bi bi-person-circle"
+                viewBox="0 0 16 16">
+                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                <path fill-rule="evenodd"
+                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+              </svg>
+            <% } %>
+              <div class="my-3 hidden toggle">
+                <input class="form-control" name="pfp" type="file" id="formFile">
+              </div>
           </div>
         </div>
         <div class="col-md-6">
           <div class="profile-head">
-            <h5>
-              Kshiti Ghelani
+            <h5 class="toggle">
+              <%= user.username %>
             </h5>
+            <h5>
+              <input type="text" name="username" class="form-control toggle hidden" id="exampleFormControlInput1"
+                value="<%= user.username %>">
+            </h5>
+            <h6 class="toggle">
+              <%= user.about || "No bio set" %>
+            </h6>
             <h6>
-              Web Developer and Designer
+              <textarea name="about" class="form-control toggle hidden" id="exampleFormControlTextarea1"
+                rows="3"><%= user.about || "No bio set" %></textarea>
             </h6>
             <p class="proile-rating">RANKINGS : <span>8/10</span></p>
             <ul class="nav nav-tabs" id="myTab" role="tablist">
@@ -47,130 +61,139 @@
           </div>
         </div>
         <div class="col-md-2">
-          <input type="submit" class="profile-edit-btn" name="btnAddMore" value="Edit Profile" />
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-md-4">
-          <div class="profile-work">
-            <p>WORK LINK</p>
-            <a href="">Website Link</a><br />
-            <a href="">Bootsnipp Profile</a><br />
-            <a href="">Bootply Profile</a>
-            <p>SKILLS</p>
-            <a href="">Web Designer</a><br />
-            <a href="">Web Developer</a><br />
-            <a href="">WordPress</a><br />
-            <a href="">WooCommerce</a><br />
-            <a href="">PHP, .Net</a><br />
-          </div>
-        </div>
-        <div class="col-md-8">
-          <div class="tab-content profile-tab" id="myTabContent">
-            <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-              <div class="row">
-                <div class="col-md-6">
-                  <label>User Id</label>
-                </div>
-                <div class="col-md-6">
-                  <p>Kshiti123</p>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <label>Name</label>
-                </div>
-                <div class="col-md-6">
-                  <p>Kshiti Ghelani</p>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <label>Email</label>
-                </div>
-                <div class="col-md-6">
-                  <p>kshitighelani@gmail.com</p>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <label>Phone</label>
-                </div>
-                <div class="col-md-6">
-                  <p>123 456 7890</p>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <label>Profession</label>
-                </div>
-                <div class="col-md-6">
-                  <p>Web Developer and Designer</p>
-                </div>
-              </div>
-            </div>
-            <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-              <div class="row">
-                <div class="col-md-6">
-                  <label>Experience</label>
-                </div>
-                <div class="col-md-6">
-                  <p>Expert</p>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <label>Hourly Rate</label>
-                </div>
-                <div class="col-md-6">
-                  <p>10$/hr</p>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <label>Total Projects</label>
-                </div>
-                <div class="col-md-6">
-                  <p>230</p>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <label>English Level</label>
-                </div>
-                <div class="col-md-6">
-                  <p>Expert</p>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-6">
-                  <label>Availability</label>
-                </div>
-                <div class="col-md-6">
-                  <p><a href="/logout">6 months</a></p>
-                </div>
-              </div>
-              <div class="row">
-                <div class="col-md-12">
-                  <label>Your Bio</label><br />
-                  <p>Your detail description</p>
-                </div>
-              </div>
-            </div>
-          </div>
+          <button type="button" class="btn btn-primary toggle" onclick="toggleform()">Edit Profile</button>
+          <button type="submit" class="btn btn-primary toggle hidden">Save Changes</button>
+
+          <!-- onclick, hide button and unhide second button for submitting -->
         </div>
       </div>
     </form>
+    <div class="row">
+      <div class="col-md-4">
+        <div class="profile-work">
+          <p>WORK LINK</p>
+          <a href="">Website Link</a><br />
+          <a href="">Bootsnipp Profile</a><br />
+          <a href="">Bootply Profile</a>
+          <p>SKILLS</p>
+          <a href="">Web Designer</a><br />
+          <a href="">Web Developer</a><br />
+          <a href="">WordPress</a><br />
+          <a href="">WooCommerce</a><br />
+          <a href="">PHP, .Net</a><br />
+        </div>
+      </div>
+      <div class="col-md-8">
+        <div class="tab-content profile-tab" id="myTabContent">
+          <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <div class="row">
+              <div class="col-md-6">
+                <label>User Id</label>
+              </div>
+              <div class="col-md-6">
+                <p>Kshiti123</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Name</label>
+              </div>
+              <div class="col-md-6">
+                <p>Kshiti Ghelani</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Email</label>
+              </div>
+              <div class="col-md-6">
+                <p>kshitighelani@gmail.com</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Phone</label>
+              </div>
+              <div class="col-md-6">
+                <p>123 456 7890</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Profession</label>
+              </div>
+              <div class="col-md-6">
+                <p>Web Developer and Designer</p>
+              </div>
+            </div>
+          </div>
+          <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+            <div class="row">
+              <div class="col-md-6">
+                <label>Experience</label>
+              </div>
+              <div class="col-md-6">
+                <p>Expert</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Hourly Rate</label>
+              </div>
+              <div class="col-md-6">
+                <p>10$/hr</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Total Projects</label>
+              </div>
+              <div class="col-md-6">
+                <p>230</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>English Level</label>
+              </div>
+              <div class="col-md-6">
+                <p>Expert</p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-6">
+                <label>Availability</label>
+              </div>
+              <div class="col-md-6">
+                <p><a href="/logout">6 months</a></p>
+              </div>
+            </div>
+            <div class="row">
+              <div class="col-md-12">
+                <label>Your Bio</label><br />
+                <p>Your detail description</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
   <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
   <script>
+    function toggleform() {
+      const elements = document.querySelectorAll(".toggle");
+      elements.forEach((element) => {
+        element.classList.toggle("hidden")
+      });
+    }
     document.addEventListener("DOMContentLoaded", function () {
       var tabTriggers = document.querySelectorAll('[data-toggle="tab"]');
-
       tabTriggers.forEach(function (tab) {
         tab.addEventListener("click", function (event) {
           event.preventDefault();
@@ -179,6 +202,21 @@
         });
       });
     });
+    document.getElementById("profile-form").addEventListener("submit", (event) => {
+      event.preventDefault();
+      const formdata = new FormData(event.target);
+      const jsonData = Object.fromEntries(formdata.entries());
+      axios
+        .post("/profile", jsonData, {
+          headers: { "Content-Type": "multipart/form-data" },
+        })
+        .then((response) => {
+          window.location.href = "/profile";
+          console.log(response);
+        })
+        .catch((error) => console.log(error.response.data));
+    })
+
   </script>
 </body>
 
