Configured profile page... again
i added a timeline to the profile page and a follower/following indicator(not tested). debugged the markdown editor in modify page. wrote a script to handle orphaned assets in db. wrote a function to handle image uploads.

--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -46,3 +46,10 @@
 .back-button {
     text-decoration: none;
 }
+
+.pfp img{
+    height: 40px;
+    width: 40px;
+    object-fit: cover;
+    border-radius: 50%;
+}
