--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -61,13 +61,13 @@
   cursor: pointer;
 }
 .proile-rating{
-  font-size: 12px;
+  font-size: 16px;
   color: #818182;
   margin-top: 5%;
 }
 .proile-rating span{
   color: #495057;
-  font-size: 15px;
+  font-size: 18px;
   font-weight: 600;
 }
 .profile-head .nav-tabs{
@@ -106,4 +106,22 @@
 .profile-tab p{
   font-weight: 600;
   color: #0062cc;
+}
+.empty h5 {
+  color: #888;
+  margin-top: 10px;
+}
+.timeline {
+  margin-top: 20px;
+}
+.follows {
+  display: flex;
+  justify-content: space-evenly;
+}
+blockquote {
+  padding: 10px;
+  margin: 10px 0;
+  border-left: 4px solid #ccc;  /* Adds a left border for visual emphasis */
+  background-color: #f9f9f9;    /* Optional: adds a background color */
+  font-style: italic;           /* Optional: makes it italicized */
 }
