--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,34 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/styles/profile.css">
-</head>
-
-<body>
+<%- include("partials/header.ejs", {user: user})%>
   <div class="container emp-profile">
     <form id="profile-form">
       <div class="row">
         <div class="col-md-4">
           <div class="profile-img">
             <% if (user.pfp) { %>
-              <img src="<%= user.pfp %>" alt=""/>
-            <% } else { %>
-              <svg xmlns="http://www.w3.org/2000/svg" height="125" fill="#888" class="bi bi-person-circle"
-                viewBox="0 0 16 16">
-                <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-                <path fill-rule="evenodd"
-                  d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
-              </svg>
-            <% } %>
-              <div class="my-3 hidden toggle">
-                <input class="form-control" name="pfp" type="file" id="formFile">
-              </div>
+              <img src="<%= user.pfp %>" alt="" />
+              <% } else { %>
+                <svg xmlns="http://www.w3.org/2000/svg" height="125" fill="#888" class="bi bi-person-circle"
+                  viewBox="0 0 16 16">
+                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                  <path fill-rule="evenodd"
+                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+                </svg>
+                <% } %>
+                  <div class="my-3 hidden toggle">
+                    <input class="form-control" name="pfp" type="file" id="formFile">
+                  </div>
           </div>
         </div>
         <div class="col-md-6">
@@ -47,7 +35,15 @@
               <textarea name="about" class="form-control toggle hidden" id="exampleFormControlTextarea1"
                 rows="3"><%= user.about || "No bio set" %></textarea>
             </h6>
-            <p class="proile-rating">RANKINGS : <span>8/10</span></p>
+            <div class="follows">
+              <p class="proile-rating">Followers: <span>
+                  <%= followers %>
+                </span></p>
+              <p class="proile-rating">Following: <span>
+                  <%= following %>
+                </span></p>
+            </div>
+
             <ul class="nav nav-tabs" id="myTab" role="tablist">
               <li class="nav-item">
                 <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
@@ -85,47 +81,40 @@
       </div>
       <div class="col-md-8">
         <div class="tab-content profile-tab" id="myTabContent">
-          <div class="tab-pane fade show active" id="home" role="tabpanel" aria-labelledby="home-tab">
-            <div class="row">
-              <div class="col-md-6">
-                <label>User Id</label>
-              </div>
-              <div class="col-md-6">
-                <p>Kshiti123</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Name</label>
-              </div>
-              <div class="col-md-6">
-                <p>Kshiti Ghelani</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Email</label>
-              </div>
-              <div class="col-md-6">
-                <p>kshitighelani@gmail.com</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Phone</label>
-              </div>
-              <div class="col-md-6">
-                <p>123 456 7890</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Profession</label>
-              </div>
-              <div class="col-md-6">
-                <p>Web Developer and Designer</p>
-              </div>
-            </div>
+          <div class="tab-pane fade show active empty" id="home" role="tabpanel" aria-labelledby="home-tab">
+            <a type="button" href="/modify" class="btn btn-outline-primary">Create a post</a>
+            <% if (posts.length==0) { %>
+              <h5>No Posts Yet</h5>
+              <% } else { %>
+                <% posts.forEach(post=> { %>
+                  <div class="col timeline">
+                    <div class="card h-100">
+                      <img src="<%= post.thumbnail %>" class="card-img-top" alt="..." />
+                      <div class="col p-4 d-flex flex-column position-static">
+                        <strong class="d-inline-block mb-2 text-success-emphasis">
+                          <%= post.category %>
+                        </strong>
+                        <h3 class="mb-0">
+                          <%= post.title %>
+                        </h3>
+                        <div class="mb-1 text-body-secondary">
+                          <%= post.created_at %>
+                        </div>
+                        <p class="mb-auto">
+                          <%= post.lede %>
+                        </p>
+                        <a href="/post/<%= post.post_id %>" class="icon-link gap-1 icon-link-hover stretched-link">
+                          Continue reading
+                          <svg class="bi">
+                            <use xlink:href="#chevron-right"></use>
+                          </svg>
+                        </a>
+                      </div>
+                    </div>
+                  </div>
+                  <% }) %>
+                    <% } %>
+
           </div>
           <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
             <div class="row">
@@ -218,6 +207,4 @@
     })
 
   </script>
-</body>
-
-</html>
+  <%- include("partials/footer.ejs")%>
