--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,28 +14,41 @@
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 <script>
-    const editor = new toastui.Editor({
-        el: document.querySelector('#body'),
-        height: '500px',
-        initialEditType: 'wysiwyg',
-        previewStyle: 'horizontal',
+    const searchInput = document.getElementById("search");
+    const resultsDiv = document.getElementById("modal-body");
+    let timeout;
+    console.log("js is fine");
+    searchInput.addEventListener("input", async (e) => {
+        clearTimeout(timeout);
+        timeout = setTimeout(() => {
+            const query = e.target.value.trim();
+            if (query.length > 0) {
+                console.log(query);
+                search(query)
+            }
+        }, 300);
     });
-
-    document.getElementById('add-post').addEventListener('submit', (event) => {
-        document.getElementById('content').value = editor.getMarkdown();
-        event.preventDefault();
-        const formData = new FormData(event.target);
-        const jsonData = Object.fromEntries(formData.entries());
-        // coverts formData to JS Object
-
-        console.log(jsonData);
-
-        axios.post("/modify", jsonData, {
-            headers: { "Content-Type": "multipart/form-data" },
-            // ☝️ is for when a form contains files
-            // it is not needed when form contains only plain text
-        }).then((response) => window.location.href = response.data.redirect).catch(error => console.log("error"));
-    });
+    async function search(query) {
+        try {
+            const response = await axios.get(`/search?q=${encodeURIComponent(query)}`);
+            const results = response.data;
+            console.log(results);
+            displayResult(results)
+        } catch (error) {
+            console.log(error);
+            console.log("error at search function");
+        }
+    }
+    function displayResult(results) {
+        if (results.length === 0) {
+            resultsDiv.innerHTML = '<p>No results found</p>';
+            return;
+        }
+        resultsDiv.innerHTML = results.map(item => `<p onclick="replace('${item.title}');" >${item.title}</p>`).join('');
+    }
+    function replace(title) {
+        searchInput.value = title;
+    }
 </script>
 </body>
 
