--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -23,7 +23,8 @@
           <a class="blog-header-logo text-body-emphasis text-decoration-none" href="/">Large</a>
         </div>
         <div class="col-4 d-flex justify-content-end align-items-center">
-          <a class="link-secondary" href="#" aria-label="Search">
+
+          <a class="link-secondary" aria-label="Search" href="#" data-bs-toggle="modal" data-bs-target="#exampleModal">
             <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" fill="none" stroke="currentColor"
               stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="mx-3" role="img"
               viewBox="0 0 24 24">
@@ -76,6 +77,21 @@
     </div>
   </div>
   <main class="container">
-</body>
-
-</html>
+    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <input id="search" class="form-control mx-2" type="text" placeholder="Search"
+              aria-label="default input example" autofocus>
+            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+          </div>
+          <div class="modal-body" id="modal-body">
+            Start typing to search
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+            <button type="button" class="btn btn-primary">Save changes</button>
+          </div>
+        </div>
+      </div>
+    </div>
