--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -36,13 +36,13 @@
 
           <% if (locals.user) { %>
             <% if (user.pfp) { %>
-              <a href="/profile">
+              <a href="/profile/@<%= user.username %>">
                 <div class="pfp">
                   <img src="<%= user.pfp %>" alt="profile picture" />
                 </div>
               </a>
               <% } else { %>
-                <a href="/profile">
+                <a href="/profile/@<%= user.username %>">
                   <svg xmlns="http://www.w3.org/2000/svg" height="25" fill="currentColor" class="bi bi-person-circle"
                     viewBox="0 0 16 16">
                     <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
@@ -81,16 +81,18 @@
       <div class="modal-dialog">
         <div class="modal-content">
           <div class="modal-header">
-            <input id="search" class="form-control mx-2" type="text" placeholder="Search"
-              aria-label="default input example" autofocus>
+            <form action="/search" method="post" id="searchform">
+              <input id="search" name="search" class="form-control mx-2" type="text" placeholder="Search"
+              aria-label="default input example">
+            </form>
+            
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
           </div>
           <div class="modal-body" id="modal-body">
-            Start typing to search
+            <h5>Start typing to search</h5>
           </div>
           <div class="modal-footer">
-            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            <button type="button" class="btn btn-primary">Save changes</button>
+            <button type="button" class="btn btn-primary">Search</button>
           </div>
         </div>
       </div>
