--- a/public/styles/home.css
+++ b/public/styles/home.css
@@ -53,3 +53,34 @@
     object-fit: cover;
     border-radius: 50%;
 }
+
+.blog-postq img{
+    width: 100%;
+    margin-bottom: 30px;
+}
+
+.author {
+    display: flex;
+    align-items: center;
+}
+
+.author img {
+    width: 90px;
+    height: 90px;
+    border-radius: 50%;
+    object-fit: cover;
+    margin: 16px;
+}
+
+.authorinfo * {
+    margin: 0;
+}
+
+.authorinfo span, .authorinfo h5 {
+    font-weight: 700;
+}
+
+.author-link {
+    text-decoration: none;
+    color: black;
+}
