--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,172 +1,247 @@
 <%- include("partials/header.ejs", {user: user})%>
   <div class="container emp-profile">
-    <form id="profile-form">
-      <div class="row">
-        <div class="col-md-4">
-          <div class="profile-img">
-            <% if (user.pfp) { %>
-              <img src="<%= user.pfp %>" alt="" />
-              <% } else { %>
-                <svg xmlns="http://www.w3.org/2000/svg" height="125" fill="#888" class="bi bi-person-circle"
-                  viewBox="0 0 16 16">
-                  <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
-                  <path fill-rule="evenodd"
-                    d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
-                </svg>
-                <% } %>
-                  <div class="my-3 hidden toggle">
-                    <input class="form-control" name="pfp" type="file" id="formFile">
-                  </div>
-          </div>
-        </div>
-        <div class="col-md-6">
-          <div class="profile-head">
-            <h5 class="toggle">
-              <%= user.username %>
-            </h5>
-            <h5>
-              <input type="text" name="username" class="form-control toggle hidden" id="exampleFormControlInput1"
-                value="<%= user.username %>">
-            </h5>
-            <h6 class="toggle">
-              <%= user.about || "No bio set" %>
-            </h6>
-            <h6>
-              <textarea name="about" class="form-control toggle hidden" id="exampleFormControlTextarea1"
-                rows="3"><%= user.about || "No bio set" %></textarea>
-            </h6>
-            <div class="follows">
-              <p class="proile-rating">Followers: <span>
-                  <%= followers %>
-                </span></p>
-              <p class="proile-rating">Following: <span>
-                  <%= following %>
-                </span></p>
+    <% if (myProfile) { %>
+      <form id="profile-form">
+        <div class="row">
+          <div class="col-md-4">
+            <div class="profile-img">
+              <% if (user.pfp) { %>
+                <img src="<%= user.pfp %>" alt="" />
+                <% } else { %>
+                  <svg xmlns="http://www.w3.org/2000/svg" height="125" fill="#888" class="bi bi-person-circle"
+                    viewBox="0 0 16 16">
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                    <path fill-rule="evenodd"
+                      d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+                  </svg>
+                  <% } %>
+                    <div class="my-3 hidden toggle">
+                      <input class="form-control" name="pfp" type="file" id="formFile">
+                    </div>
             </div>
+          </div>
+          <div class="col-md-6">
+            <div class="profile-head">
+              <h5 class="toggle">
+                <%= user.username %>
+              </h5>
+              <h5>
+                <input type="text" name="username" class="form-control toggle hidden" id="exampleFormControlInput1"
+                  value="<%= user.username %>">
+              </h5>
+              <h6 class="toggle">
+                <%= user.about || "No bio set" %>
+              </h6>
+              <h6>
+                <textarea name="about" class="form-control toggle hidden" id="exampleFormControlTextarea1"
+                  rows="3"><%= user.about || "No bio set" %></textarea>
+              </h6>
+              <div class="follows">
+                <p class="proile-rating">Followers: <span>
+                    <%= followers %>
+                  </span></p>
+                <p class="proile-rating">Following: <span>
+                    <%= following %>
+                  </span></p>
+              </div>
 
-            <ul class="nav nav-tabs" id="myTab" role="tablist">
-              <li class="nav-item">
-                <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab" aria-controls="home"
-                  aria-selected="true">Timeline</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
-                  aria-controls="profile" aria-selected="false">Settings</a>
-              </li>
-            </ul>
+              <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item">
+                  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
+                    aria-controls="home" aria-selected="true">Timeline</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
+                    aria-controls="profile" aria-selected="false">Settings</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <button type="button" class="btn btn-primary toggle" onclick="toggleform()">Edit Profile</button>
+            <button type="submit" class="btn btn-primary toggle hidden">Save Changes</button>
           </div>
         </div>
-        <div class="col-md-2">
-          <button type="button" class="btn btn-primary toggle" onclick="toggleform()">Edit Profile</button>
-          <button type="submit" class="btn btn-primary toggle hidden">Save Changes</button>
+      </form>
+      <% } else { %>
+        <div class="row">
+          <div class="col-md-4">
+            <div class="profile-img">
+              <% if (profile.pfp) { %>
+                <img src="<%= profile.pfp %>" alt="" />
+                <% } else { %>
+                  <svg xmlns="http://www.w3.org/2000/svg" height="125" fill="#888" class="bi bi-person-circle"
+                    viewBox="0 0 16 16">
+                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0" />
+                    <path fill-rule="evenodd"
+                      d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1" />
+                  </svg>
+                  <% } %>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <div class="profile-head">
+              <h5 class="">
+                <%= profile.username %>
+              </h5>
+              <h6 class="">
+                <%= profile.about || "No bio set" %>
+              </h6>
+              <div class="follows">
+                <p class="proile-rating">Followers: <span>
+                    <%= followers %>
+                  </span></p>
+                <p class="proile-rating">Following: <span>
+                    <%= following %>
+                  </span></p>
+              </div>
+              <ul class="nav nav-tabs" id="myTab" role="tablist">
+                <li class="nav-item">
+                  <a class="nav-link active" id="home-tab" data-toggle="tab" href="#home" role="tab"
+                    aria-controls="home" aria-selected="true">Timeline</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" id="profile-tab" data-toggle="tab" href="#profile" role="tab"
+                    aria-controls="profile" aria-selected="false">Settings</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+          <div class="col-md-2">
+            <% if (locals.user) { %>
+              <% if (myfollowing.includes(profile.user_id)) { %>
+                <form id="follow">
+                  <input type="hidden" name="id" value="<%= profile.user_id %>">
+                  <button type="submit" id="fbtn" class="btn btn-outline-primary">Unfollow</button>
+                </form>
+                <% } else if (myfollowers.includes(profile.user_id)) { %>
+                  <form id="follow">
+                    <input type="hidden" name="id" value="<%= profile.user_id %>">
+                    <button type="submit" id="fbtn" class="btn btn-primary">Follow back</button>
+                  </form>
+                  <% } else { %>
+                    <form id="follow">
+                      <input type="hidden" name="id" value="<%= profile.user_id %>">
+                      <button type="submit" id="fbtn" class="btn btn-primary">Follow</button>
+                    </form>
+                    <% } %>
+                      <% } else { %>
+                        <a href="/login" class="btn btn-primary">follow</a>
+                        <% } %>
 
-          <!-- onclick, hide button and unhide second button for submitting -->
+          </div>
         </div>
-      </div>
-    </form>
-    <div class="row">
-      <div class="col-md-4">
-        <div class="profile-work">
-          <p>WORK LINK</p>
-          <a href="">Website Link</a><br />
-          <a href="">Bootsnipp Profile</a><br />
-          <a href="">Bootply Profile</a>
-          <p>SKILLS</p>
-          <a href="">Web Designer</a><br />
-          <a href="">Web Developer</a><br />
-          <a href="">WordPress</a><br />
-          <a href="">WooCommerce</a><br />
-          <a href="">PHP, .Net</a><br />
-        </div>
-      </div>
-      <div class="col-md-8">
-        <div class="tab-content profile-tab" id="myTabContent">
-          <div class="tab-pane fade show active empty" id="home" role="tabpanel" aria-labelledby="home-tab">
-            <a type="button" href="/modify" class="btn btn-outline-primary">Create a post</a>
-            <% if (posts.length==0) { %>
-              <h5>No Posts Yet</h5>
-              <% } else { %>
-                <% posts.forEach(post=> { %>
-                  <div class="col timeline">
-                    <div class="card h-100">
-                      <img src="<%= post.thumbnail %>" class="card-img-top" alt="..." />
-                      <div class="col p-4 d-flex flex-column position-static">
-                        <strong class="d-inline-block mb-2 text-success-emphasis">
-                          <%= post.category %>
-                        </strong>
-                        <h3 class="mb-0">
-                          <%= post.title %>
-                        </h3>
-                        <div class="mb-1 text-body-secondary">
-                          <%= post.created_at %>
-                        </div>
-                        <p class="mb-auto">
-                          <%= post.lede %>
-                        </p>
-                        <a href="/post/<%= post.post_id %>" class="icon-link gap-1 icon-link-hover stretched-link">
-                          Continue reading
-                          <svg class="bi">
-                            <use xlink:href="#chevron-right"></use>
-                          </svg>
-                        </a>
-                      </div>
+        <% } %>
+
+          <div class="row">
+            <div class="col-md-4">
+              <div class="profile-work">
+                <p>WORK LINK</p>
+                <a href="">Website Link</a><br />
+                <a href="">Bootsnipp Profile</a><br />
+                <a href="">Bootply Profile</a>
+                <p>SKILLS</p>
+                <a href="">Web Designer</a><br />
+                <a href="">Web Developer</a><br />
+                <a href="">WordPress</a><br />
+                <a href="">WooCommerce</a><br />
+                <a href="">PHP, .Net</a><br />
+              </div>
+            </div>
+            <div class="col-md-8">
+              <div class="tab-content profile-tab" id="myTabContent">
+                <div class="tab-pane fade show active empty" id="home" role="tabpanel" aria-labelledby="home-tab">
+                  <% if (myProfile) { %>
+                    <a type="button" href="/modify" class="btn btn-outline-primary">Create a post</a>
+                    <% } %>
+                      <% if (posts.length==0) { %>
+                        <h5>No Posts Yet</h5>
+                        <% } else { %>
+                          <% posts.forEach(post=> { %>
+                            <div class="col timeline">
+                              <div class="card h-100">
+                                <img src="<%= post.thumbnail %>" class="card-img-top" alt="..." />
+                                <div class="col p-4 d-flex flex-column position-static">
+                                  <strong class="d-inline-block mb-2 text-success-emphasis">
+                                    <%= post.category %>
+                                  </strong>
+                                  <h3 class="mb-0">
+                                    <%= post.title %>
+                                  </h3>
+                                  <div class="mb-1 text-body-secondary">
+                                    <%= post.created_at %>
+                                  </div>
+                                  <p class="mb-auto">
+                                    <%= post.lede %>
+                                  </p>
+                                  <a href="/post/<%= post.post_id %>"
+                                    class="icon-link gap-1 icon-link-hover stretched-link">
+                                    Continue reading
+                                    <svg class="bi">
+                                      <use xlink:href="#chevron-right"></use>
+                                    </svg>
+                                  </a>
+                                </div>
+                              </div>
+                            </div>
+                            <% }) %>
+                              <% } %>
+
+                </div>
+                <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
+                  <div class="row">
+                    <div class="col-md-6">
+                      <label>Experience</label>
+                    </div>
+                    <div class="col-md-6">
+                      <p>Expert</p>
                     </div>
                   </div>
-                  <% }) %>
-                    <% } %>
-
-          </div>
-          <div class="tab-pane fade" id="profile" role="tabpanel" aria-labelledby="profile-tab">
-            <div class="row">
-              <div class="col-md-6">
-                <label>Experience</label>
-              </div>
-              <div class="col-md-6">
-                <p>Expert</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Hourly Rate</label>
-              </div>
-              <div class="col-md-6">
-                <p>10$/hr</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Total Projects</label>
-              </div>
-              <div class="col-md-6">
-                <p>230</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>English Level</label>
-              </div>
-              <div class="col-md-6">
-                <p>Expert</p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-6">
-                <label>Availability</label>
-              </div>
-              <div class="col-md-6">
-                <p><a href="/logout">6 months</a></p>
-              </div>
-            </div>
-            <div class="row">
-              <div class="col-md-12">
-                <label>Your Bio</label><br />
-                <p>Your detail description</p>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <label>Hourly Rate</label>
+                    </div>
+                    <div class="col-md-6">
+                      <p>10$/hr</p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <label>Total Projects</label>
+                    </div>
+                    <div class="col-md-6">
+                      <p>230</p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <label>English Level</label>
+                    </div>
+                    <div class="col-md-6">
+                      <p>Expert</p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-6">
+                      <label>Log out button -></label>
+                    </div>
+                    <div class="col-md-6">
+                      <% if (myProfile) { %>
+                        <p><a href="/logout">Log out</a></p>
+                        <% } %>
+                          <p>6 months</p>
+                    </div>
+                  </div>
+                  <div class="row">
+                    <div class="col-md-12">
+                      <label>Your Bio</label><br />
+                      <p>Your detail description</p>
+                    </div>
+                  </div>
+                </div>
               </div>
             </div>
           </div>
-        </div>
-      </div>
-    </div>
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
@@ -191,19 +266,38 @@
         });
       });
     });
-    document.getElementById("profile-form").addEventListener("submit", (event) => {
+    if (<%= myProfile %>) {
+      document.getElementById("profile-form").addEventListener("submit", (event) => {
+        event.preventDefault();
+        const formdata = new FormData(event.target);
+        const jsonData = Object.fromEntries(formdata.entries());
+        axios
+          .post("/profile", jsonData, {
+            headers: { "Content-Type": "multipart/form-data" },
+          })
+          .then((response) => {
+            window.location.href = "/profile";
+            console.log(response);
+          })
+          .catch((error) => console.log(error.response.data));
+      });
+    }
+
+    const follow_form = document.getElementById("follow");
+    follow_form.addEventListener("submit", (event) => {
       event.preventDefault();
-      const formdata = new FormData(event.target);
-      const jsonData = Object.fromEntries(formdata.entries());
-      axios
-        .post("/profile", jsonData, {
-          headers: { "Content-Type": "multipart/form-data" },
-        })
-        .then((response) => {
-          window.location.href = "/profile";
-          console.log(response);
-        })
-        .catch((error) => console.log(error.response.data));
+
+      const button = document.getElementById("fbtn");
+      button.classList.toggle("btn-outline-primary");
+      button.classList.toggle("btn-primary");
+      button.innerHTML = "Unfollow"
+
+      const formData = new FormData(event.target);
+      const jsonData = Object.fromEntries(formData.entries());
+
+      axios.post("/follow", jsonData).then((response) => {
+        // console.log(response.data);
+      });
     })
 
   </script>
