--- a/public/styles/profile.css
+++ b/public/styles/profile.css
@@ -103,14 +103,6 @@
 .profile-tab label{
   font-weight: 600;
 }
-.profile-tab p{
-  font-weight: 600;
-  color: #0062cc;
-}
-.empty h5 {
-  color: #888;
-  margin-top: 10px;
-}
 .timeline {
   margin-top: 20px;
 }
@@ -132,13 +124,20 @@ blockquote {
   padding: 16px;
   margin: 0;
 }
-#modal-body h5 {
+#modal-body h5, .tagempty {
   color: #888;
 }
-#modal-body p:hover{
+#modal-body p:hover {
   background-color: #888;
   cursor: pointer;
 }
 #searchform {
   width: 92%;
+}
+.tagitem:hover {
+  background-color: #005fff26;
+  cursor: pointer;
+}
+.tagitem, #tag-rec{
+  border-radius: 10px;
 }
