--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -10,7 +10,6 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous">
     </script>
-<script src="https://uicdn.toast.com/editor/latest/toastui-editor-all.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 
 <script>
@@ -35,7 +34,7 @@
     async function search(query) {
         try {
             const response = await axios.get(`/query?q=${encodeURIComponent(query)}`);
-            const results = response.data;
+            const results = response.data.results;
             displayResult(results)
         } catch (error) {
             console.log(error);
